update tutorial notebook example numbering

--- a/docs/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
+++ b/docs/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
@@ -21,10 +21,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Last updated: 2021-07-30\n",
+      "Last updated: 2022-04-30\n",
       "\n",
-      "pandas   : 1.2.4\n",
-      "biopandas: 0.2.9.dev0\n",
+      "pandas   : 1.4.2\n",
+      "biopandas: 0.3.0.dev0\n",
       "\n"
      ]
     }
@@ -89,31 +89,31 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2\n",
+    "PDB files can be directly fetched from The AlphaFold Structure Database at [https://alphafold.ebi.ac.uk/](https://alphafold.ebi.ac.uk/) via its unique [UniProt](https://www.uniprot.org/) Identifier after initializing a new [`PandasPdb`](../api/biopandas.pdb#pandaspdb) object and calling the [`fetch_af2`](../api/biopandas.pdb#pandaspdbfetch_pdb) method:"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "from biopandas.pdb import PandasPdb\n",
     "\n",
     "# Initialize a new PandasPdb object\n",
-    "# and fetch the PDB file from rcsb.org\n",
-    "ppdb = PandasPdb().fetch_pdb('3eiy')"
+    "# and fetch the PDB file from alphafold.ebi.ac.uk\n",
+    "ppdb = PandasPdb().fetch_af2('Q5VSL9')"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2\n",
-    "PDB files can be directly fetched from The AlphaFold Structure Database at [https://alphafold.ebi.ac.uk/](https://alphafold.ebi.ac.uk/) via its unique [UniProt](https://www.uniprot.org/) Identifier after initializing a new [`PandasPdb`](../api/biopandas.pdb#pandaspdb) object and calling the [`fetch_pdb`](../api/biopandas.pdb#pandaspdbfetch_pdb) method:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### 2 a)\n",
+    "#### 3 a)\n",
     "\n",
     "Alternatively, we can load PDB files from local directories as regular PDB files using [`read_pdb`](../api/biopandas.pdb#pandaspdbread_pdb):"
    ]
@@ -149,7 +149,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2 b)\n",
+    "#### 3 b)\n",
     "\n",
     "Or, we can load them from gzip archives like so (note that the file must end with a '.gz' suffix in order to be recognized as a gzip file):"
    ]
