refactor AF2 fetch API

--- a/docs/tutorials/Working_with_mmCIF_Structures_in_DataFrames.ipynb
+++ b/docs/tutorials/Working_with_mmCIF_Structures_in_DataFrames.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -110,7 +110,7 @@
     "\n",
     "# Initialize a new PandasPdb object\n",
     "# and fetch the PDB file from alphafold.ebi.ac.uk\n",
-    "ppdb = PandasMmcif().fetch_af2('Q5VSL9')"
+    "ppdb = PandasMmcif().fetch_mmcif(uniprot_id='Q5VSL9', source='alphafold2')"
    ]
   },
   {
