update tutorial notebooks

--- a/docs/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
+++ b/docs/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
@@ -106,7 +106,7 @@
                         "\n",
                         "# Initialize a new PandasPdb object\n",
                         "# and fetch the PDB file from alphafold.ebi.ac.uk\n",
-                        "ppdb = PandasPdb().fetch_pdb(uniprot_id='Q5VSL9', source=\"alphafold2\")"
+                        "ppdb = PandasPdb().fetch_pdb(uniprot_id='Q5VSL9', source=\"alphafold2-v2\")"
                   ]
             },
             {
