--- a/docs/tutorials/Working_with_mmCIF_Structures_in_DataFrames.ipynb
+++ b/docs/tutorials/Working_with_mmCIF_Structures_in_DataFrames.ipynb
@@ -110,7 +110,7 @@
     "\n",
     "# Initialize a new PandasPdb object\n",
     "# and fetch the PDB file from alphafold.ebi.ac.uk\n",
-    "ppdb = PandasMmcif().fetch_mmcif(uniprot_id='Q5VSL9', source='alphafold2')"
+    "ppdb = PandasMmcif().fetch_mmcif(uniprot_id='Q5VSL9', source='alphafold2-v2')"
    ]
   },
   {
