update changelog and docs

--- a/docs/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
+++ b/docs/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
@@ -71,7 +71,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1 -- Loading PDB file from the Protein Data Bank\n",
+    "### 1 -- Loading a PDB file from the Protein Data Bank\n",
     "\n",
     "PDB files can be directly fetched from The Protein Data Bank at [http://www.rcsb.org](http://www.rcsb.org) via its unique 4-letter after initializing a new [`PandasPdb`](../api/biopandas.pdb#pandaspdb) object and calling the [`fetch_pdb`](../api/biopandas.pdb#pandaspdbfetch_pdb) method:"
    ]
@@ -93,7 +93,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2 -- Loading PDB files from the AlphaFold Structure Database"
+    "### 2 -- Loading a PDB file from the AlphaFold Structure Database"
    ]
   },
   {
@@ -329,7 +329,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3 a) -- Loading PDB file from local files\n",
+    "### 3 a) -- Loading a PDB structure from a local file\n",
     "\n",
     "\n",
     "Alternatively, we can load PDB files from local directories as regular PDB files using [`read_pdb`](../api/biopandas.pdb#pandaspdbread_pdb):"
@@ -366,7 +366,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3 b) -- Loading PDB file from local gzipped files\n",
+    "### 3 b) -- Loading a PDB structure from a local gzipped PDB file\n",
     "\n",
     "Or, we can load them from gzip archives like so (note that the file must end with a '.gz' suffix in order to be recognized as a gzip file):"
    ]
@@ -557,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4 -- Loading PDB files from a Python List"
+    "### 4 -- Loading a PDB file from a Python List"
    ]
   },
   {
