--- a/docs/tutorials/Working_with_mmCIF_Structures_in_DataFrames.ipynb
+++ b/docs/tutorials/Working_with_mmCIF_Structures_in_DataFrames.ipynb
@@ -68,14 +68,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are 3 ways to load a mmCIF structure into a `PandasMmcif` object.\n"
+    "There are several ways to load a mmCIF structure into a `PandasMmcif` object.\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 1\n",
+    "### 1 -- Loading an mmCIF file from the Protein Data Bank\n",
+    "\n",
     "MmCIF files can be directly fetched from The Protein Data Bank at [http://www.rcsb.org](http://www.rcsb.org) via its unique 4-letter after initializing a new [`PandasMmcif`](../api_subpackages/biopandas.mmcif) object and calling the `fetch_mmcif` method:"
    ]
   },
@@ -96,7 +97,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 2\n",
+    "### 2 -- Loading an mmCIF file from the AlphaFold Structure Database\n",
+    "\n",
+    "\n",
+    "(*New in version 0.4.0*)\n",
+    "\n",
     "PDB files can be directly fetched from The AlphaFold Structure Database at [https://alphafold.ebi.ac.uk/](https://alphafold.ebi.ac.uk/) via its unique [UniProt](https://www.uniprot.org/) Identifier after initializing a new [`PandasPdb`](../api/biopandas.pdb#pandaspdb) object and calling the [`fetch_af2`](../api/biopandas.pdb#pandaspdbfetch_pdb) method:"
    ]
   },
@@ -117,7 +122,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3 a)\n",
+    "### 3 a) -- Loading a mmCIF structure from a local file\n",
     "\n",
     "Alternatively, we can load mmCIF files from local directories as regular mmCIF files using `read_mmcif`:"
    ]
@@ -153,7 +158,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3 b)\n",
+    "### 3 b) -- Loading a mmCIF structure from a local gzipped mmCIF file\n",
     "\n",
     "Or, we can load them from gzip archives like so (note that the file must end with a '.gz' suffix in order to be recognized as a gzip file):"
    ]
@@ -359,14 +364,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### 3"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "**Loading mmCif files from a Python List**"
+    "### 4 -- Loading a mmCIF file from a Python List"
    ]
   },
   {
@@ -2153,7 +2151,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.7"
   },
   "toc": {
    "base_numbering": 1,
