add get_pandas_pdb to the docs

--- a/docs/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
+++ b/docs/tutorials/Working_with_PDB_Structures_in_DataFrames.ipynb
@@ -557,7 +557,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4 -- Loading a PDB file from a Python List"
+    "### 4 -- Loading a PDB file from a Python list"
    ]
   },
   {
@@ -694,6 +694,243 @@
     "ppdb2.read_pdb_from_list(three_eiy)\n",
     "\n",
     "ppdb2.df['ATOM'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 5 -- Obtaining a PDB file from a mmCIF structure"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Since v0.5.0, it is now also possible to obtain a `PandasPdb` object from a mmCIF file, using `PandasMmcift`'s `PandasMmcif.get_pandas_pdb()`:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Type: <class 'biopandas.pdb.pandas_pdb.PandasPdb'>\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>record_name</th>\n",
+       "      <th>atom_number</th>\n",
+       "      <th>blank_1</th>\n",
+       "      <th>atom_name</th>\n",
+       "      <th>alt_loc</th>\n",
+       "      <th>residue_name</th>\n",
+       "      <th>blank_2</th>\n",
+       "      <th>chain_id</th>\n",
+       "      <th>residue_number</th>\n",
+       "      <th>insertion</th>\n",
+       "      <th>...</th>\n",
+       "      <th>x_coord</th>\n",
+       "      <th>y_coord</th>\n",
+       "      <th>z_coord</th>\n",
+       "      <th>occupancy</th>\n",
+       "      <th>b_factor</th>\n",
+       "      <th>blank_4</th>\n",
+       "      <th>segment_id</th>\n",
+       "      <th>element_symbol</th>\n",
+       "      <th>charge</th>\n",
+       "      <th>line_idx</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>1</td>\n",
+       "      <td></td>\n",
+       "      <td>N</td>\n",
+       "      <td></td>\n",
+       "      <td>SER</td>\n",
+       "      <td></td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.527</td>\n",
+       "      <td>54.656</td>\n",
+       "      <td>-1.667</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>52.73</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>N</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "      <td>CA</td>\n",
+       "      <td></td>\n",
+       "      <td>SER</td>\n",
+       "      <td></td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.259</td>\n",
+       "      <td>54.783</td>\n",
+       "      <td>-0.368</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>52.54</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>3</td>\n",
+       "      <td></td>\n",
+       "      <td>C</td>\n",
+       "      <td></td>\n",
+       "      <td>SER</td>\n",
+       "      <td></td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.127</td>\n",
+       "      <td>53.553</td>\n",
+       "      <td>-0.105</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>52.03</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>4</td>\n",
+       "      <td></td>\n",
+       "      <td>O</td>\n",
+       "      <td></td>\n",
+       "      <td>SER</td>\n",
+       "      <td></td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td>5.274</td>\n",
+       "      <td>53.451</td>\n",
+       "      <td>-0.594</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>52.45</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>O</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>ATOM</td>\n",
+       "      <td>5</td>\n",
+       "      <td></td>\n",
+       "      <td>CB</td>\n",
+       "      <td></td>\n",
+       "      <td>SER</td>\n",
+       "      <td></td>\n",
+       "      <td>A</td>\n",
+       "      <td>2</td>\n",
+       "      <td></td>\n",
+       "      <td>...</td>\n",
+       "      <td>2.273</td>\n",
+       "      <td>54.944</td>\n",
+       "      <td>0.792</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>52.69</td>\n",
+       "      <td></td>\n",
+       "      <td></td>\n",
+       "      <td>C</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>4</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 21 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  record_name  atom_number blank_1 atom_name alt_loc residue_name blank_2  \\\n",
+       "0        ATOM            1                 N                  SER           \n",
+       "1        ATOM            2                CA                  SER           \n",
+       "2        ATOM            3                 C                  SER           \n",
+       "3        ATOM            4                 O                  SER           \n",
+       "4        ATOM            5                CB                  SER           \n",
+       "\n",
+       "  chain_id  residue_number insertion  ... x_coord  y_coord  z_coord  \\\n",
+       "0        A               2            ...   2.527   54.656   -1.667   \n",
+       "1        A               2            ...   3.259   54.783   -0.368   \n",
+       "2        A               2            ...   4.127   53.553   -0.105   \n",
+       "3        A               2            ...   5.274   53.451   -0.594   \n",
+       "4        A               2            ...   2.273   54.944    0.792   \n",
+       "\n",
+       "   occupancy  b_factor  blank_4 segment_id element_symbol charge  line_idx  \n",
+       "0        1.0     52.73                                  N    NaN         0  \n",
+       "1        1.0     52.54                                  C    NaN         1  \n",
+       "2        1.0     52.03                                  C    NaN         2  \n",
+       "3        1.0     52.45                                  O    NaN         3  \n",
+       "4        1.0     52.69                                  C    NaN         4  \n",
+       "\n",
+       "[5 rows x 21 columns]"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from biopandas.mmcif import PandasMmcif\n",
+    "\n",
+    "\n",
+    "mmcif = PandasMmcif().fetch_mmcif(\"3EIY\")\n",
+    "pdb = mmcif.get_pandas_pdb()\n",
+    "\n",
+    "print(\"Type:\", type(pdb))\n",
+    "pdb.df[\"ATOM\"].head()    "
    ]
   },
   {
